--- a/files/readme
+++ b/files/readme
@@ -1,2 +1,2 @@
-libusb.tar.xz - static fork of https://libusb.info/ (https://github.com/libusb/libusb)
-ultimarc-linux.tar.xz - static fork of https://github.com/katie-snow/Ultimarc-linux
+libusb.tar.xz - static fork of https://libusb.info/ (https://github.com/libusb/libusb) (202110)
+ultimarc-linux.tar.xz - static fork of https://github.com/katie-snow/Ultimarc-linux (202110)
